--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-[#f5eae6] h-screen w-screen overflow-hidden">
+        <!-- class="bg-[#f5eae6]" -->
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
